[tool.poetry]
name = "repl-nix-doctor-appointments-api"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_doctor_appointments_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-mongoengine = "^1.0.0"
app = "^0.0.1"
redberry = "^0.0.7.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
